--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
     "nunjucks": "^3.1.3",
+    "path": "^0.12.7",
     "pg-promise": "^8.4.4"
   }
 }
